--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,8 +1,36 @@
-<div xmlns:th="http://www.thymeleaf.org">
+<div xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" th:href="@{/}">TODOs List</a>
+
+
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" th:href="@{/}">TODOs List</a>
+                </div>
+
+                <ul class="nav navbar-nav">
+                    <li sec:authorize="isAuthenticated()">
+                        <a th:href="@{|/todos/all/users/${#authentication.principal.id}|}">My ToDos</a>
+                    </li>
+                    <li sec:authorize="hasAuthority('ADMIN')">
+                        <a th:href="@{/users/all}">List of Users</a>
+                    </li>
+                </ul>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li sec:authorize="isAnonymous()">
+                            <a th:href="@{/login-form}">Login</a>
+                        </li>
+                    </ul>
+
+                    <form class="navbar-form navbar-right" sec:authorize="isAuthenticated()" th:action="@{/logout}"
+                          method="post">
+                        Hello, <a th:href="@{|/users/${#authentication.principal.id}/read|}"><span
+                            sec:authentication="principal.firstName">Name</span></a>
+                        <button type="submit" class="btn btn-default">Logout</button>
+                    </form>
+                </div>
             </div>
         </div>
     </nav>
