changed access to pages

--- a/src/main/resources/templates/form-login.html
+++ b/src/main/resources/templates/form-login.html
@@ -11,6 +11,9 @@
 <div class="col-md-offset-2">
     <h2>LogIn Page</h2>
 </div>
+<h5>mike@mail.com -  1111
+    nick@mail.com - 2222
+    nora@mail.com - 3333</h5>
 <div th:if="${param.error}">Invalid username or password</div>
 <div th:if="${param.logout}">You have been logged out</div>
 <form class="form-horizontal" method="POST" id="form-login" th:action="@{/form-login}">
