Fixed bug with loggout

--- a/src/main/resources/templates/form-login.html
+++ b/src/main/resources/templates/form-login.html
@@ -11,11 +11,14 @@
 <div class="col-md-offset-2">
     <h2>LogIn Page</h2>
 </div>
-<h5>mike@mail.com -  1111
+<hr>
+<h4>Default USERS</h4>
+<h5>mike@mail.com - 1111
     nick@mail.com - 2222
     nora@mail.com - 3333</h5>
-<div th:if="${param.error}">Invalid username or password</div>
-<div th:if="${param.logout}">You have been logged out</div>
+<hr>
+<div th:if="${param.error}"><h1>Invalid username or password</h1><hr></div>
+<div th:if="${param.logout}"><h1>You have been logged out</h1><hr></div>
 <form class="form-horizontal" method="POST" id="form-login" th:action="@{/form-login}">
     <div class="form-group">
         <h2 class="col-sm-2 control-label">Username:</h2>
@@ -24,7 +27,7 @@
         </div>
     </div>
     <div class="form-group">
-        <h2 class="col-sm-2 control-label" >Password:</h2>
+        <h2 class="col-sm-2 control-label">Password:</h2>
         <div class="col-sm-8">
             <input type="password" class="form-control" name="password"/>
         </div>
@@ -34,7 +37,7 @@
     </div>
 </form>
 <br><br>
-    <h3  class="form-group" style="align-content: center">Don't have an account?
+<h3 class="form-group" style="align-content: center">Don't have an account?
     <a th:href="@{/users/create}"> Register now!</a></h3>
 </body>
 </html>
